# DRTK

./: .buildinfo  CNAME  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  mipmap_grid_sampler.pyi  msi_ext.pyi  objects.inv  py-modindex.html  pyproject.toml  rasterizer_ext.pyi  render_cuda_ext.pyi  renderlayer_example.py  sanity_check.py  sanity_check_mipmap_gridsample.py  search.html  searchindex.js  setup.py
_modules/: index.html
_sources/: index.md.txt
_static/: custom.css  pygments.css
api_reference/: edge_grad_estimator.html  filter2d.html  geometry.html  grid_scatter.html  index.html  indexing.html  interpolate.html  mipmap_grid_sample.html  msi.html  projection.html  rasterize.html  render.html  transform.html
docs/: Makefile  requirements.txt
drtk/: __init__.py  edge_grad_estimator.py  edge_grad_ext.pyi  filter2d.py  filter2d_ext.pyi  filter2d_ref.py  grid_scatter.py  grid_scatter_ext.pyi  interpolate.py  interpolate_ext.pyi  mipmap_grid_sample.py  mipmap_grid_sample_ext.pyi  msi.py  msi_ext.pyi  rasterize.py  rasterize_ext.pyi  render.py  render_ext.pyi  screen_space_uv_derivative.py  transform.py
installation/: index.html
test/: cuda_vs_py_test.py  perception_parity_test.py  sanity_check_mipmap_gridsample.py  test_near_far.py  two_triangles.py  uv_grad_example.py
tutorials/: DRTK_Tutorial_1_hello_triangle.html  DRTK_Tutorial_1_hello_triangle.ipynb  DRTK_Tutorial_2_optimizing_geometry.html  DRTK_Tutorial_2_optimizing_geometry.ipynb  DRTK_Tutorial_3_geometry_intersection.html  DRTK_Tutorial_3_geometry_intersection.ipynb  index.html  (+4 more)
(+118 files in other folders)
